DIAM-1480 Fix for scroll, for cuted dropdowns, and dropdown jumps after scroll

--- a/src/Diamante/DistributionBundle/Resources/public/css/less/main.less
+++ b/src/Diamante/DistributionBundle/Resources/public/css/less/main.less
@@ -45,13 +45,6 @@ input[type=text].hasDatepicker.ui-datepicker-dialog-is-below:focus,
   left: 0;
 }
 
-/*
- * DIAM-1358 Part of the mass action menu is hidden.
- * temporary fix till oro fix bug with dropdowns in grid
- */
-.container-fluid.grid-scrollable-container {
-  overflow: visible;
-}
 
 
 .desktop-version .main-menu-sided.minimized .main-menu {
